// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-pug > should add pug loader config correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.pug\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/plugin-pug/src/pugLoader",
          },
        ],
      },
    ],
  },
}
`;

exports[`plugin-pug > should allow to custom pug options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.pug\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/plugin-pug/src/pugLoader",
            "options": {
              "pretty": true,
            },
          },
        ],
      },
    ],
  },
}
`;
